--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,10 +1,11 @@
 * {
-    margin: 12 auto; 
+    margin: 12px auto; 
     text-align: center;
 }
 
 #confucius {
     width: 500px;
     perspective: 1000px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3)
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    display: block;
 }
