--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,6 +1,10 @@
 * {
-    margin: 12px auto; 
+    margin: 12px auto;
     text-align: center;
+}
+
+[v-cloak] {
+    display: none;
 }
 
 #confucius {
@@ -17,3 +21,4 @@
     width: 150px;
     height: 150px;
 }
+
