--- a/assets/styles.css
+++ b/assets/styles.css
@@ -25,4 +25,7 @@
 .poem-styling {
     white-space: pre-line;
     text-align: center;
+    margin-left: 2px;
+    margin-right: 2px;
+    line-height: 1.2em
 }
