--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,24 +1,34 @@
 * {
-    margin: 12px auto;
-    text-align: center;
+  margin: 12px auto;
+  text-align: center;
 }
 
 [v-cloak] {
-    display: none;
+  display: none;
 }
 
 #confucius {
-    width: 350px;
-    perspective: 1000px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-    display: block;
+  width: 350px;
+  perspective: 1000px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+  display: block;
 }
 
 .haiku-box {
-    perspective: 1000px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-    border: 1px solid black;
-    width: 150px;
-    height: 150px;
+  perspective: 1000px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+  border: 1px solid black;
+  width: 150px;
+  height: 150px;
 }
 
+#hannahsDiv {
+  border: 3px solid black;
+  width: 500px;
+  height: 300px;
+  text-align: center;
+}
+
+#hannahsHaikuList {
+  list-style-type: none;
+}
