--- a/assets/styles.css
+++ b/assets/styles.css
@@ -36,6 +36,39 @@
   text-align: center;
 }
 
+#haikuList {
+  width: 500px;
+
+  text-align: center;
+}
+
 #hannahsHaikuList {
   list-style-type: none;
+}
+
+#hannahsLi {
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
+  margin: 1rem auto;
+  border-radius: 10px;
+  padding: 1rem;
+  text-align: center;
+  width: 90%;
+  max-width: 40rem;
+}
+
+#hannahsButton {
+  font: inherit;
+  cursor: pointer;
+  border: 1px solid #ff0077;
+  background-color: grey;
+  color: white;
+  padding: 0.05rem 1rem;
+  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.26);
+}
+
+#hannahsButton:hover,
+#hannahsButton:active {
+  background-color: #ec3169;
+  border-color: #ec3169;
+  box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.26);
 }
